src/css/style.css
/* ... */
.main {
	position: relative;
	height: calc(100% - 6em);
	overflow: auto;
	-webkit-overflow-scrolling: touch;
}
	.installed-app .main {
		height: calc(100% - 5.5em);
	}
	.main:before {
		content: "Loading...";
		position: fixed;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		z-index: 5;
		background: #31B660;
		font-family: "Chunk Five", serif;
		text-shadow: 0 1px 2px rgba(0,0,0,0.2);
		font-size: 3em;
      /*Loosen the kerning a little*/
      letter-spacing: 0.04em;
		text-align: center;
		color: white;
		display: flex;
		justify-content: center;
		align-items: center;
		/*Move up and out of the way*/
		transform: translateY(-200%);
		/*Transition for when sliding up*/
		transition: all 600ms ease-out;
	}
		.main.loading:before {
			animation: bounceDown 1000ms linear both;
			transform: translateY(0);
			/*Don't transition anything*/
			transition-duration: 0ms;
		}

.current-weather {
	margin: 3% auto;
}
	.current-weather .col {
		padding: 0 2%;
	}
	.current-icon {
		position: relative;
		top: 0.1em;
		height: 0.2em;
		line-height: 1em;
		font-size: 16em;
	}
		.current-icon:before {
			line-height: 0;
		}
	.current-weather p {
		margin-bottom: 0.4em;
      padding: 0 2%;
	}
	.temperature {
		font-size: 7em;
		line-height: 1em;
		margin-bottom: 0;
	}
	.current-weather .data-summary {
		font-size: 1.4em;
		padding-left: 3%;
	}
		.data-summary li {
			padding-left: 15%;
			min-height: 1.6em;
			line-height: 1.6em;
			position: relative;
			margin-bottom: 0.2em;
		}
		.data-summary .climacon {
			position: absolute;
			top: -0.1em;
			left: 0;
			height: 1em;
			margin-right: 0.2em;
			width: 10%;
			text-align: center;
		}
		.data-summary .umbrella {
			top: 0;
			font-size: 1.6em;
		}

.upcoming-weather h2 {
	margin-bottom: 0.8em;
}
.upcoming-weather .climacon {
	font-size: 4em;
}
.upcoming-weather .col {
	padding: 1em 0;
	margin-bottom: 2%;
	height: 100%;
	border-right: 0.1em solid #d7443d;
   text-align: center;
}
		.upcoming-weather .col:last-child {
			border-right: none;
		}

/*Breakpoints*/
@media all and (max-height: 850px) {
	.modal-content {
		margin-top: 4%;
	}
}
@media all and (max-width: 1100px) {
	body {
		font-size: 90%;
	}
	.current-weather .col {
		padding: 0;
	}
}
@media all and (max-width: 850px) {
	body {
		font-size: 80%;
	}
}
@media all and (max-width: 600px) {
	body {
		font-size: 70%;
	}
   body > header .main-btn span {
      font-size: 1.8em;
   }
	button span {
		display: none;
	}
		button.main-btn span {
			vertical-align: middle;
			display: inline-block;
		}
}
@media all and (max-width: 500px) {
	body > header .top-bar {
		height: 5em;
		line-height: 5em;
	}
		body.installed-app > header .top-bar {
			height: 5.5em;
		}

	body > header .main-btn span {
		font-size: 1.2em;
	}
	.search-btn i {
		line-height: 3.4em;
		font-size: 0.8em;
	}
	.main {
		height: calc(100% - 5em);
	}
		.installed-app .main {
			height: calc(100% - 5.5em);
		}
	.modal-content {
		margin: 0;
		min-height: 100%;
	}
	.current-weather .col {
		padding: 0;
	}
   .current-weather .data-summary {
      padding: 0 2%;
   }
   	.data-summary li {
   		padding-left: 8%;
   		padding-right: 2%;
   	}
	/*Columns*/
	.center-sm {
		text-align: center;
	}
	.col-sm {
		display: inline-block;
		vertical-align: top;
		margin-right: -0.25em;
	}
		.middle .col-sm {
			vertical-align: middle;
		}
	.col-sm-2-1 {
		width: 50%;
	}
	.col-sm-3-1 {
		width: 33%;
	}
	.break-sm {
		line-height: 1em;
		display: block;
		margin: auto;
	}
		.col.break-sm {
			width: 100%;
		}
}
@media all and (max-width: 450px) {
   .data-summary li {
      display: block;
      width: 100%;
      margin: auto;
      padding-left: 10%;
      font-size: 120%;
      text-align: center;
   }
      .data-summary .climacon {
         left: 3%;
      }
}
/* ... */

